--- a/README.adoc
+++ b/README.adoc
@@ -46,7 +46,7 @@ https://openliberty.io/guides/rest-intro.html[Creating a RESTful web service^].
 
 To iteratively develop your application in a container, you can use development mode, which will automatically
 build a Docker image, mount the required directories, bind the required ports, and run the application inside of a container. 
-Development mode will also listen for any changes and rebuild the image and restart the container as nessecary. 
+Development mode will also listen for any changes and rebuild the image and/or restart the container as nessecary. 
 
 === What is Docker?
 
@@ -97,7 +97,7 @@ include::{common-includes}/gitclone.adoc[]
 
 == Running the container 
 
-The Open Liberty Maven plug-in includes a `devc` goal, known as "development mode with a container" that builds a Docker image, mounts the required directories,
+The Open Liberty Maven plug-in includes a `devc` goal, known as "development mode with a container", that builds a Docker image, mounts the required directories,
 binds the required ports, and then runs the application inside of a container. This development mode will also listen for any 
 changes in the application source code or configuration and will rebuild the image and/or restart the container as nessecary.
 If a Dockerfile is present, development mode will use it to build the image and container, otherwise the default Open Liberty image, 
@@ -248,7 +248,7 @@ directory, the [hotspot=pom.xml file=1]`pom.xml` file, and some system files. Fe
 
 Another useful feature of development mode with a container is the ability to pass addtional options
 to the `docker run` command. This can be done using the `-DdockerRunOpts` option with the `devc` goal.
-Any options that you would normally add to the `docker run` command, can be added to this option. Here
+Any options that you would normally add to the `docker run` command can be added to this option. Here
 is an example of an environment variable being passed in:
 
 [role="no_copy"]
@@ -259,7 +259,7 @@ mvn liberty:devc -DdockerRunOpts="--env JAVA_HOME=/opt/java/openjdk"
 If the Dockerfile isn't located in the directory that the `devc` goal is being run from, you can also 
 use the `-Ddockerfile` option to specify the location. 
 
-Additionally, both of these options can be added to the `pom.xml` file as under the `<configuration>` 
+Additionally, both of these options can be added to the `pom.xml` file under the `<configuration>` 
 tag of the Liberty Maven Plugin as such:
 
 [role="no_copy"]
