--- a/README.adoc
+++ b/README.adoc
@@ -85,10 +85,113 @@ versions of Java do not interfere with each other. Containers are quick to run c
 and they take up only a fraction of the memory of a single virtual machine image.
 
 // =================================================================================================
-// Getting Started
+// Getting started
 // =================================================================================================
 [role='command']
 include::{common-includes}/gitclone.adoc[]
+
+
+// =================================================================================================
+// Packaging your application 
+// =================================================================================================
+
+== Packaging your application
+
+First, run the Maven package goal to build the application `.war` file. 
+
+To try out the application that is going to be in inside your Docker container, navigate to the 
+`start` directory are the the following Maven goal. This will build you application and run it inside 
+Open Liberty:
+
+[role='command']
+```
+mvn liberty:run 
+```
+
+After you see the following message, your application server is ready.
+
+[role="no_copy"]
+----
+The defaultServer server is ready to run a smarter planet.
+----
+
+Point your browser to the localhost:9080/LibertyProject/System/properties[localhost:9080/LibertyProject/System/properties^] URL where 
+you can see a JSON file that contains the system properties of the JVM in your container.
+
+When you are done checking out the application, package it so that it is ready to be run from a Docker 
+container. Run the Maven package goal to build the application .war file in the `target` directory.
+
+[role='command']
+```
+mvn package
+```
+
+// =================================================================================================
+// Creating the Dockerfile
+// =================================================================================================
+
+== Creating the Dockerfile
+
+// File 0
+Dockerfile
+[source, text, linenums, role="code_column"]
+----
+include::finish/Dockerfile[]
+----
+
+// File 1
+`.dockerignore`
+[source, text, linenums, role="code_column"]
+----
+include::finish/.dockerignore[]
+----
+
+A Dockerfile is a collection of instructions for building a Docker image that can then be run as a
+container. Every Dockerfile begins with a parent or base image on top of which various commands
+are run. For example, you can start your image from scratch and execute commands that download and
+install Java, or you can start from an image that already contains a Java installation.
+
+Navigate to the `start` directory to begin.
+
+[role="code_command hotspot file=0",subs="quotes"]
+----
+#Create the `Dockerfile`.#
+`Dockerfile`
+----
+
+The [hotspot=from file=0]`FROM` instruction initializes a new build stage and indicates the parent image from which your
+image is built. If you don't need a parent image, then use `FROM scratch`, which makes your image a
+base image. 
+
+In this case, you’re using the `openliberty/open-liberty:kernel-java8-openj9-ubi` image as your parent image, 
+which comes with the latest Open Liberty runtime.
+
+The `COPY` instructions are structured as `COPY` 
+`[--chown=<user>:<group>]` `<source>` `<destination>`. 
+They copy local files into the specified destination within your Docker image.
+In this case, the server configuration files that are located at `src/main/liberty/config` 
+are copied to the `/config/` destination directory.
+
+Run the following command to inspect the [hotspot=description file=0]`descripton` field
+of the [hotspot=label file=0]`LABEL` that you specified in the Dockerfile 
+
+[role='command']
+```
+docker inspect --format='{{.Config.Labels.description}}' dev-mode-image
+```
+
+As you can see, the Dockerfile you created is being used to run the container. 
+
+=== Optional: Writing a .dockerignore file
+
+When Docker runs a build, it sends all of the files and directories that are located in the same directory
+as the Dockerfile to its build context, making them available for use in instructions like `ADD` and `COPY`.
+To make image building faster, add all files and directories that aren't necessary for building your
+image to a `.dockerignore` file. This excludes them from the build context.
+
+A [hotspot file=1]`.dockerignore` file is available to you in the `start` directory. This file includes the [hotspot=src file=1]`src`
+directory, the [hotspot=pom.xml file=1]`pom.xml` file, and some system files. Feel free to add anything else that you want to exclude.
+
 
 // =================================================================================================
 // Running the container 
@@ -99,8 +202,6 @@ include::{common-includes}/gitclone.adoc[]
 The Open Liberty Maven plug-in includes a `devc` goal that builds a Docker image, mounts the required directories,
 binds the required ports, and then runs the application inside of a container. This development mode will also listen for any 
 changes in the application source code or configuration and will rebuild the image and restart the container as necessary.
-If a Dockerfile is present, development mode will use it to build the image and container, otherwise the default Open Liberty image, 
-`openliberty/open-liberty:kernel-java8-openj9-ubi`, will be used.
 
 
 Build and run the container by running the `devc` goal from the `start` directory
@@ -109,8 +210,6 @@ Build and run the container by running the `devc` goal from the `start` director
 ```
 mvn liberty:devc
 ```
-
-Because there is no Dockerfile present in this directory, the default Open Liberty image is being used.  
 
 Before you access your application from the browser, run the `docker ps` command from the command line to make sure that your
 container is running and didn’t crash:
@@ -133,6 +232,7 @@ To view a full list of all available containers, run the `docker ps -a` command 
 
 If your container is running without problems, point your browser to http://localhost:9080/LibertyProject/System/properties[http://localhost:9080/LibertyProject/System/properties^] 
 where you can see a JSON file that contains the system properties of the JVM in your container.
+
 
 // =================================================================================================
 // Updating the application while the container is running 
@@ -159,7 +259,7 @@ With your container running, make the following update to the source code.
 Change the endpoint of your application from `properties` to `properties-new` by changing the [hotspot=Path]`@Path`
 annotation to `"properties-new"`.
 
-After you make the file changes, Open Liberty automatically restarts the container. To see these changes reflected in the application, 
+After you make the file changes, Open Liberty automatically updates the application. To see these changes reflected in the application, 
 point your browser to http://localhost:9080/LibertyProject/System/properties-new[http://localhost:9080/LibertyProject/System/properties-new^].
 
 When you need to stop the container, press `CTRL+C` in the session that the container was started in or run 
@@ -173,93 +273,15 @@ mvn liberty:stop
 ```
 
 // =================================================================================================
-// Creating the Dockerfile
-// =================================================================================================
-
-== Creating the Dockerfile
-
-// File 0
-Dockerfile
-[source, text, linenums, role="code_column"]
-----
-include::finish/Dockerfile[]
-----
-
-// File 1
-`.dockerignore`
-[source, text, linenums, role="code_column"]
-----
-include::finish/.dockerignore[]
-----
-
-As mentioned previously, the `devc` goal can be used with or without a Dockerfile. 
-A Dockerfile is a collection of instructions for building a Docker image that can then be run as a
-container. Every Dockerfile begins with a parent or base image on top of which various commands
-are run. For example, you can start your image from scratch and execute commands that download and
-install Java, or you can start from an image that already contains a Java installation.
-
-Let's try running development mode with a Dockerfile. Navigate to the `start` directory to begin.
-
-[role="code_command hotspot file=0",subs="quotes"]
-----
-#Create the `Dockerfile`.#
-`Dockerfile`
-----
-
-The [hotspot=from file=0]`FROM` instruction initializes a new build stage and indicates the parent image from which your
-image is built. If you don't need a parent image, then use `FROM scratch`, which makes your image a
-base image. 
-
-In this case, you’re using the `openliberty/open-liberty:kernel-java8-openj9-ubi` image as your parent image, 
-which comes with the latest Open Liberty runtime.
-
-The [hotspot=link file=0]`RUN` instruction executes various shell commands in a new layer on top of the current image.
-In this case, you create a symlink between the `/opt/ol/wlp/usr/servers` directory and the `/servers`
-directory. This way, you can mount your servers more easily because you don't need to use long path names.
-Note that since the Open Liberty Docker image runs by default with user `1001` (which is a non-root user),
-you must temporarily switch to the `root` user to create the symlink. This is done by using 
-the [hotspot=user-root hotspot=user file=0]`USER` instruction. 
-
-Run the following command to inspect the [hotspot=description file=0]`descripton` field of the [hotspot=label file=0]`LABEL` that you specified in the Dockerfile 
-
-[role='command']
-```
-docker inspect --format='{{.Config.Labels.description}}' dev-mode-image
-```
-
-As you can see, the Dockerfile you created is being used to run the container. 
-
-=== Optional: Writing a .dockerignore file
-
-When Docker runs a build, it sends all of the files and directories that are located in the same directory
-as the Dockerfile to its build context, making them available for use in instructions like `ADD` and `COPY`.
-To make image building faster, add all files and directories that aren't necessary for building your
-image to a `.dockerignore` file. This excludes them from the build context.
-
-A [hotspot file=1]`.dockerignore` file is available to you in the `start` directory. This file includes the [hotspot=src file=1]`src`
-directory, the [hotspot=pom.xml file=1]`pom.xml` file, and some system files. Feel free to add anything else that you want to exclude.
-
-// =================================================================================================
 // Starting development mode with run options 
 // =================================================================================================
 
 == Starting development mode with run options
 
-Another useful feature of development mode with a container is the ability to pass addtional options
-to the `docker run` command. This can be done using the `-DdockerRunOpts` option with the `devc` goal.
-Any options that you would normally add to the `docker run` command can be added to this option. Here
-is an example of an environment variable being passed in:
-
-[role="no_copy"]
-----
-mvn liberty:devc -DdockerRunOpts="--env JAVA_HOME=/opt/java/openjdk"
-----
-
-If the Dockerfile isn't located in the directory that the `devc` goal is being run from, you can also 
-use the `-Ddockerfile` option to specify the location. 
-
-Additionally, both of these options can be added to the `pom.xml` file under the `<configuration>` 
-tag of the Liberty Maven Plugin as such:
+Another useful feature of development mode with a container is the ability to pass additional options
+to the `docker run` command. You can do this by adding the `<dockerRunOpts>` tag to the `pom.xml` under 
+the `<configuration>` tag of the Liberty Maven Plugin. Here is an example of an environment variable 
+being passed in:
 
 [role="no_copy"]
 ----
@@ -267,9 +289,19 @@ tag of the Liberty Maven Plugin as such:
 <artifactId>liberty-maven-plugin</artifactId>
 <version>3.2.2</version>
 <configuration>
-    <dockerRunOpts> ... </dockerRunOpts>
-    <dockerFile> ... </dockerFile>
+    <dockerRunOpts>"--env JAVA_HOME=/opt/java/openjdk"</dockerRunOpts>
 </configuration>
+----
+
+If the Dockerfile isn't located in the directory that the `devc` goal is being run from, you can add
+the `<dockerFile>` tag to specify the location. 
+
+Additionally, both of these options can passed from the command line when running the `devc` goal by
+adding `-D` as such:
+
+[role="no_copy"]
+----
+mvn liberty:devc -DdockerRunOpts="--env JAVA_HOME=/opt/java/openjdk" -DdockerFile="./path/to/file" 
 ----
 
 // =================================================================================================
