--- a/README.adoc
+++ b/README.adoc
@@ -40,6 +40,13 @@ Learn how to use Docker containers for iterative development.
 
 You will learn how to set up, run, and iteratively develop a simple REST application in a container with Open Liberty and Docker.
 
+Open Liberty is an application server designed for the cloud. It’s small, lightweight, and designed with modern cloud-native
+application development in mind. Open Liberty simplifies the development process for these applications by automating 
+the repetative actions associated with running applications inside containers, like rebuilding your image and stopping and starting 
+your container. 
+
+You'll also learn how to create and run automated tests for your application and container.
+
 The implementation of the REST application can be found in the
 `start/src` directory. To learn more about this application and how to build it, read
 https://openliberty.io/guides/rest-intro.html[Creating a RESTful web service^].
@@ -55,6 +62,7 @@ Learn more about Docker on the https://www.docker.com/what-docker[official Docke
 
 To install Docker, follow the instructions in the https://docs.docker.com/engine/installation[official Docker documentation^].
 
+
 === What is a container?
 
 A container is a lightweight, stand-alone package that contains a piece of software that is bundled together
@@ -64,56 +72,11 @@ machine at the same time in isolation from each other.
 
 Learn more about containers on the https://www.docker.com/what-container[official Docker website^].
 
-=== Why use containers?
-
-Consider a scenario where you need to deploy your application on another environment. Your application
-works on your local machine, but when you try to run it on a different environment, it breaks. You do
-some debugging and discover that you built your application with Java 8,
-but this new environment has only Java 11 installed. Although this issue is generally easy to fix,
-you don't want your application to be missing dozens of version-specific dependencies.
-You can create a virtual machine specifically for testing your application, but VM images generally
-take up a huge amount of space and are slow to run.
-
-To solve the problem, you can containerize your application by
-bundling it together with the entire environment that it needs to run. You can then run this container
-on any machine that is running Docker regardless of how that machine's environment is set up. You can also run multiple
-containers on a single machine in isolation from one another so that two containers that have different
-versions of Java do not interfere with each other. Containers are quick to run compared to individual VMs,
-and they take up only a fraction of the memory of a single virtual machine image.
-
 // =================================================================================================
 // Getting started
 // =================================================================================================
 [role='command']
 include::{common-includes}/gitclone.adoc[]
-
-
-To try out the application that is going to be running inside your Docker container, navigate to the 
-`start` directory and run the following Maven goal. This will build your application and run it inside 
-Open Liberty:
-
-[role='command']
-```
-mvn liberty:run 
-```
-
-After you see the following message, your application server is ready.
-
-[role="no_copy"]
-----
-The defaultServer server is ready to run a smarter planet.
-----
-
-Point your browser to the http://localhost:9080/LibertyProject/System/properties[http://localhost:9080/LibertyProject/System/properties^] URL where 
-you can see a JSON file that contains the system properties of the running JVM.
-
-When you are done checking out the application, press `CRTL+C` in the shell session where you started
-the server from. Alternatively, you can run the `liberty:stop` goal in another shell session. 
-
-[role='command']
-```
-mvn liberty:stop
-```
 
 // =================================================================================================
 // Creating the Dockerfile
@@ -172,17 +135,15 @@ image to a `.dockerignore` file. This excludes them from the build context.
 A [hotspot file=1]`.dockerignore` file is available to you in the `start` directory. This file includes 
 the `pom.xml` file and some system files. Feel free to add anything else that you want to exclude.
 
-
 // =================================================================================================
-// Running the container 
+// Launching Open Liberty in development mode  
 // =================================================================================================
 
-== Running the container 
+== Launching Open Liberty in development mode
 
 The Open Liberty Maven plug-in includes a `devc` goal that builds a Docker image, mounts the required directories,
 binds the required ports, and then runs the application inside of a container. This development mode will also listen for any 
 changes in the application source code or configuration and will rebuild the image and restart the container as necessary.
-
 
 Build and run the container by running the `devc` goal from the `start` directory
 
@@ -213,7 +174,6 @@ To view a full list of all available containers, run the `docker ps -a` command 
 If your container is running without problems, point your browser to http://localhost:9080/LibertyProject/System/properties[http://localhost:9080/LibertyProject/System/properties^] 
 where you can see a JSON file that contains the system properties of the JVM in your container.
 
-
 // =================================================================================================
 // Updating the application while the container is running 
 // =================================================================================================
@@ -242,16 +202,6 @@ annotation to `"properties-new"`.
 After you make the file changes, Open Liberty automatically updates the application. To see these changes reflected in the application, 
 point your browser to http://localhost:9080/LibertyProject/System/properties-new[http://localhost:9080/LibertyProject/System/properties-new^].
 
-When you need to stop the container, press `CTRL+C` in the session that the container was started in or run 
-the `mvn liberty:stop` goal from the `start` directory in another shell session. This will both stop and 
-remove the container for you. You can check that the container was stopped by  running the `docker ps` 
-command again.
-
-[role='command']
-```
-mvn liberty:stop
-```
-
 // =================================================================================================
 // Starting development mode with run options 
 // =================================================================================================
@@ -269,7 +219,7 @@ being passed in:
 <artifactId>liberty-maven-plugin</artifactId>
 <version>3.2.2</version>
 <configuration>
-    <dockerRunOpts>--env JAVA_HOME=/opt/java/openjdk</dockerRunOpts>
+    <dockerRunOpts>-e JAVA_HOME=/opt/java/openjdk</dockerRunOpts>
 </configuration>
 ----
 
