Added 'Why use containers'

--- a/README.adoc
+++ b/README.adoc
@@ -11,7 +11,7 @@
 :page-description: Learn how to use Docker containers for iterative development. 
 :page-releasedate: 2017-12-27
 :page-tags: ['Docker']
-:page-related-guides: ['rest-intro']
+:page-related-guides: ['rest-intro', 'containerize']
 :page-guide-category: basic
 :page-essential: true
 :page-essential-order: 4
@@ -69,6 +69,22 @@ A container is a lightweight, stand-alone package that contains a piece of softw
 with the entire environment that it needs to run. Containers are small compared to regular images and can
 run on any environment where Docker is set up. Moreover, you can run multiple containers on a single
 machine at the same time in isolation from each other.
+
+=== Why use a container to develop?
+
+Consider a scenario where you need to deploy your application on another environment. Your application
+works on your local machine, but when you try to run it on a different environment, it breaks. You do
+some debugging and discover that you built your application with Java 8,
+but this new environment has only Java 11 installed. Although this issue is generally easy to fix,
+you don't want your application to be missing dozens of version-specific dependencies.
+You can create a virtual machine specifically for testing your application, but VM images generally
+take up a huge amount of space and are slow to run.
+
+To avoid this kind of problem, you can instead choose to develop your application in a container, bundled together with the
+entire environment that it needs to run. By doing this, you know that at any point in your iterative development process,
+the application can run inside that container in any other environment that is running Docker.
+This helps avoid any unpleasant surprises when you go to test or deploy your application down the road. 
+Containers are quick to run and do not have a major impact on the speed of your interative development. 
 
 Learn more about containers on the https://www.docker.com/what-container[official Docker website^].
 
