--- a/README.adoc
+++ b/README.adoc
@@ -302,6 +302,6 @@ mvn liberty:devc \
 -DdockerFile="./path/to/file" \
 ----
 
-To learn more about development mode with a container and it's different
+To learn more about development mode with a container and its different
 features, check out the  
 https://github.com/OpenLiberty/ci.maven/blob/master/docs/dev.md#devc-container-mode[Documentation].
